; ModuleID = '/home/carl/AnghaBench/mpv/video/out/extr_wayland_common.c_pres_set_clockid.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/extr_wayland_common.c_pres_set_clockid.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wp_presentation = type { i32 }
%struct.vo_wayland_state = type { %struct.wp_presentation* }

@CLOCK_MONOTONIC = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, %struct.wp_presentation*, i32)* @pres_set_clockid to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pres_set_clockid(i8* %0, %struct.wp_presentation* %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wp_presentation*, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.vo_wayland_state*, align 8
  store i8* %0, i8** %4, align 8
  store %struct.wp_presentation* %1, %struct.wp_presentation** %5, align 8
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.vo_wayland_state*
  store %struct.vo_wayland_state* %9, %struct.vo_wayland_state** %7, align 8
  %10 = load %struct.wp_presentation*, %struct.wp_presentation** %5, align 8
  %11 = load %struct.vo_wayland_state*, %struct.vo_wayland_state** %7, align 8
  %12 = getelementptr inbounds %struct.vo_wayland_state, %struct.vo_wayland_state* %11, i32 0, i32 0
  store %struct.wp_presentation* %10, %struct.wp_presentation** %12, align 8
  %13 = load i32, i32* @CLOCK_MONOTONIC, align 4
  store i32 %13, i32* %6, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
